# vibin

./: .gitignore  AGENT.md  Cargo.toml  LICENSE  README.md  THIRD-PARTY-NOTICES.md  build.rs  cliff.toml  flake.nix  install.sh  rust-analyzer.toml
.github/workflows/: demo.yml  dictionaries.yml  nix.yml  release.yml
assets/: confusables.txt  diff-highlights.scm  en_US.extra.dic  kotlin-highlights.scm
assets/dict/: _common.txt  cpp.dic  cpp.txt  csharp.dic  csharp.txt  css.dic  css.txt  docker.dic  go.dic  go.txt  html.dic  html.txt  k8s.dic  kotlin.dic  php.dic  php.txt  python.dic  python.txt  ruby.dic  ruby.txt  rust.dic  rust.txt  shell.dic  shell.txt  sql.dic  terraform.dic  ts.dic  ts.txt
assets/patterns/: bmp.pat  bplist.pat  cfb.pat  der.pat  dxbc.pat  elf.pat  gif.pat  ico.pat  isobmff.pat  itunesdb.pat  jpeg.pat  macho.pat  opentype.pat  pe.pat  png.pat  riff.pat  spirv.pat  sqlite.pat  tar.pat  tiff.pat  wasm.pat  win32.pat  zip.pat
benches/: editor.rs
demo/: README.md  demo-ghostty.sh  demo.tape.tmpl  hero-ghostty.sh  links.yaml  record.sh  theme-shot.tape.tmpl  themes.sh  workspace.sh
packaging/completions/: _vibin  vibin.bash  vibin.fish
packaging/homebrew/: vibin.rb
packaging/man/: vibin.1
patches/: crossterm-color-scheme.patch
scripts/: demo-workspace.sh  demo.tape.tmpl  extract-dict.py  record.sh
src/: app.rs  backend.rs  chats.rs  clipboard.rs  color.rs  config.rs  confusable.rs  devicons.rs  diff.rs  filetree.rs  git.rs  hex.rs  imageview.rs  input.rs  keybind.rs  kittyanim.rs  lib.rs  main.rs  markdown.rs  openrouter.rs  palette.rs  parrot.rs  pattern.rs  projects.rs  session.rs  spell.rs  textinput.rs  ui.rs  update.rs
src/acp/: mod.rs
src/editor/: highlight.rs  mod.rs
src/lsp/: mod.rs
tests/: e2e.rs
