[package]
name = "vibin"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "a terminal code editor with Claude Code sessions living next to your code"
homepage = "https://github.com/szkabaroli/vibin"
repository = "https://github.com/szkabaroli/vibin"

# `cargo binstall vibin --git https://github.com/szkabaroli/vibin` pulls the
# prebuilt tarballs the release workflow publishes, matching this layout.
# (crates.io publishing stays blocked by the vendored-crossterm [patch], so
# binstall reads the git manifest rather than the registry.)
[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-v{ version }-{ target }.tar.gz"
bin-dir = "{ name }-v{ version }-{ target }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"
[dependencies]
anyhow = "1.0.103"
# default-features off drops image support (text-only); wayland-data-control
# adds native Wayland clipboard on Linux (the dep is target-gated, so it's a
# no-op on macOS/Windows). arboard picks Wayland vs X11 at runtime.
arboard = { version = "3.6.1", default-features = false, features = ["wayland-data-control"] }
base64 = "0.22"
crossterm = "0.29.0"
figment = { version = "0.10.19", features = ["toml"] }
flate2 = "1"
gif = "0.14.2"
# vibin only touches local repos (status/diff/stage/commit) — no fetch/push,
# so we drop the default ssh/https transports. that means no openssl/libssh2
# to statically link, which makes the musl release builds painless.
git2 = { version = "0.21.0", default-features = false }
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "webp", "bmp", "ico", "tiff"] }
imara-diff = "0.1"
nucleo-matcher = "0.3.1"
ratatui = "0.30.2"
ratatui-image = { version = "11", default-features = false, features = ["crossterm"] }
ropey = "1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
spellbook = "0.4.2"
toml = "1.1.2"
tree-sitter = "0.26.10"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.2"
tree-sitter-c-sharp = "0.23.5"
tree-sitter-cpp = "0.23.4"
tree-sitter-css = "0.25.0"
tree-sitter-diff = "0.1.0"
tree-sitter-go = "0.25.0"
tree-sitter-highlight = "0.26.10"
tree-sitter-html = "0.23.2"
tree-sitter-ini = "1.4.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-kotlin-ng = "1.1.0"
tree-sitter-language = "0.1.7"
tree-sitter-md = "0.5.3"
tree-sitter-objc = "3.0.2"
tree-sitter-odin = "1.3.0"
tree-sitter-php = "0.24.2"
tree-sitter-proto = "0.4.0"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-sequel = "0.3.11"
tree-sitter-swift = "0.7.3"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
tree-sitter-xml = "0.7.0"
tree-sitter-yaml = "0.7.2"
tree-sitter-zig = "1.1.2"
unicode-width = "0.2"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
divan = "0.1"
tempfile = "3.27.0"
# the e2e harness drives the real `vibin` binary in a pseudo-terminal and
# reads its rendered screen — vibin itself no longer needs a PTY.
portable-pty = "0.9.0"
vt100 = "0.16.2"

[[bench]]
name = "editor"
harness = false

[build-dependencies]
cc = "1.2.67"

# crossterm with color-scheme events (mode 2031) — vendored from open PR
# crossterm-rs/crossterm#1052 (commit 9659104, still version 0.29.0).
# patches/crossterm-color-scheme.patch records the delta vs. master.
# Drop this override once the PR ships in a crossterm release.
[patch.crates-io]
crossterm = { path = "vendor/crossterm" }
